# my-discord-bot

./: .gitignore  AGENTS.md  Dockerfile  README.MD  pyproject.toml  requirements.txt  vercel.json
backend/: .env.example  main.py
backend/cogs/: ai_chat.py  firebase_setup.py  music.py  now_playing.py  playlist.py  spotify_down.py  welcome.py
backend/cogs/ai_chat/: ai_chat.py
backend/cogs/database/: firebase_setup.py
backend/cogs/donation/: donation.py
backend/cogs/general/: general.py
backend/cogs/leveling/: leveling.py
backend/cogs/moderation/: moderation.py
backend/cogs/music/: music.py  spotify_down.py  ytdlp_source.py
backend/cogs/photobox/: photobox.py
backend/utils/: auto_responder_store.py  constants.py  firestore_stats.py  formatters.py  intent_router.py  spam_engine.py
backend/web/: web_app.py
cogs/: music.py  spotify_down.py
frontend/static/css/: auto_responders.css  landing.css  now_playing.css  photobox.css  queue.css  welcome_settings.css
frontend/static/js/: ai_chat.js  auto_responders.js  dashboard.js  landing.js  photobox.js  welcome.js
frontend/templates/: ai_chat.html  auto_responders.html  base.html  dashboard.html  landing.html  now_playing.html  photobox.html  welcome_settings.html
scripts/: get_spotify_token.py
